@@ -13,7 +13,8 @@ exportMethods(
               "sim",
               "sigma.hat",
               "print",
-              "show"
+              "show",
+              "traceplot"
               )
 
 export(
@@ -44,7 +45,6 @@ export(
        "sigma.hat",
        "sim",
        "standardize",
-       "traceplot.bugs",
        "triangleplot"
 )
 
